--- a/app/src/main/res/layout/activity_waiting_room.xml
+++ b/app/src/main/res/layout/activity_waiting_room.xml
@@ -6,6 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".WaitingRoomActivity">
 
+    <FrameLayout
+        android:id="@+id/loader_container_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </FrameLayout>
+
     <Button
         android:id="@+id/waiting_room_cancel_button"
         android:layout_width="wrap_content"
@@ -38,11 +45,24 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <com.andtinder.view.CardContainer
+        <com.daprlabs.aaron.swipedeck.layouts.SwipeFrameLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/layoutview"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent" />
+            xmlns:swipedeck="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/swipeLayout"
+            android:orientation="vertical">
+
+            <com.daprlabs.aaron.swipedeck.SwipeDeck
+                android:id="@+id/swipe_deck"
+                android:layout_width="match_parent"
+                android:layout_height="480dp"
+                android:padding="50dp"
+                swipedeck:max_visible="3"
+                swipedeck:card_spacing="15dp"
+                swipedeck:swipe_enabled="true"/>
+
+        </com.daprlabs.aaron.swipedeck.layouts.SwipeFrameLayout>
 
     </android.support.constraint.ConstraintLayout>
 
