--- a/app/src/main/res/layout/fragment_loading.xml
+++ b/app/src/main/res/layout/fragment_loading.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".shared.LoadingFragment"
+    tools:context=".fragments.LoaderFragment"
     android:background="#88222222">
 
     <ProgressBar
