--- a/app/src/main/res/layout/activity_waiting_room.xml
+++ b/app/src/main/res/layout/activity_waiting_room.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".WaitingRoomActivity">
+    tools:context=".activities.WaitingRoomActivity">
 
     <FrameLayout
         android:id="@+id/loader_container_layout"
