--- a/app/src/main/res/layout/activity_specialization_list.xml
+++ b/app/src/main/res/layout/activity_specialization_list.xml
@@ -48,5 +48,11 @@
             android:text="Suivant" />
 
     </LinearLayout>
+    <FrameLayout
+        android:id="@+id/loader_container_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </FrameLayout>
 
 </android.support.constraint.ConstraintLayout>
