--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,6 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="80dp"
         android:layout_marginEnd="8dp"
+        android:fontFamily="@font/roboto_font"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         app:layout_constraintBottom_toTopOf="@+id/appCompatButtonLogin"
@@ -38,10 +39,12 @@
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/textInputEditTextEmail"
-            android:inputType="textEmailAddress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/hint_email" />
+            android:fontFamily="@font/roboto_font"
+            android:hint="@string/hint_email"
+            android:inputType="textEmailAddress"
+            android:textSize="14sp" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -61,8 +64,10 @@
             android:id="@+id/textInputEditTextPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/roboto_font"
+            android:hint="@string/hint_password"
             android:inputType="textPassword"
-            android:hint="@string/hint_password" />
+            android:textSize="14sp" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.v7.widget.AppCompatButton
@@ -88,6 +93,7 @@
         android:layout_marginBottom="84dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:fontFamily="@font/roboto_font"
         android:text="@string/hint_forgot_password"
         app:layout_constraintBottom_toTopOf="@+id/textViewLinkRegister"
         app:layout_constraintEnd_toEndOf="parent"
@@ -101,6 +107,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:text="@string/text_already_member"
+        app:fontFamily="@font/roboto_font"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
