--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -11,14 +11,17 @@
     tools:context=".activities.LoginActivity">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textViewTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
+        android:fontFamily="@font/roboto"
         android:gravity="left"
         android:text="Créer un compte"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/textInputLayoutFirstname"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/appCompatButtonLogin"
@@ -35,7 +38,7 @@
         app:layout_constraintBottom_toTopOf="@+id/textInputLayoutFirstname"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_revert" />
+        app:srcCompat="?attr/actionModeCloseDrawable" />
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/textInputLayoutFirstname"
@@ -52,7 +55,9 @@
             android:id="@+id/textInputEditTextFirstname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/hint_firstname" />
+            android:fontFamily="@font/roboto"
+            android:hint="@string/hint_firstname"
+            android:textSize="14sp" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -70,7 +75,9 @@
             android:id="@+id/textInputEditTextLastname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/hint_lastname" />
+            android:fontFamily="@font/roboto"
+            android:hint="@string/hint_lastname"
+            android:textSize="14sp" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -88,7 +95,9 @@
             android:id="@+id/textInputEditTextEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/hint_email" />
+            android:fontFamily="@font/roboto"
+            android:hint="@string/hint_email"
+            android:textSize="14sp" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -106,7 +115,10 @@
             android:id="@+id/textInputEditTextPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/hint_password" />
+            android:fontFamily="@font/roboto"
+            android:hint="@string/hint_password"
+            android:inputType="textPassword"
+            android:textSize="14sp" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -124,7 +136,10 @@
             android:id="@+id/textInputEditTextConfirmPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/hint_confirm_password" />
+            android:fontFamily="@font/roboto_font"
+            android:hint="@string/hint_confirm_password"
+            android:inputType="textPassword"
+            android:textSize="14sp" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.v7.widget.AppCompatButton
@@ -136,6 +151,7 @@
         android:layout_marginStart="8dp"
         android:background="@drawable/btn_rounded"
         android:backgroundTint="@color/bluePrimary"
+        android:fontFamily="@font/roboto_font"
         android:text="@string/text_register"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
