--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,55 +27,78 @@
             <LinearLayout
                 android:layout_width="100dp"
                 android:layout_height="100dp"
+                android:layout_marginEnd="8dp"
+                android:background="@color/lightBlue"
+                android:gravity="center"
                 android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/add_psy_image_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@android:drawable/sym_def_app_icon" />
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    app:srcCompat="@drawable/ic_mes_medecins"
+                    android:contentDescription="@string/todo" />
 
                 <TextView
-                    android:id="@+id/add_psy_text"
+                    android:id="@+id/add_doctor_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/add_psy_text" />
+                    android:layout_marginTop="5dp"
+                    android:text="@string/add_psy_text"
+                    android:textAlignment="center"
+                    android:textColor="@color/mediumBlue"
+                    android:textStyle="bold" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="100dp"
                 android:layout_height="100dp"
+                android:background="@color/lightBlue"
+                android:gravity="center"
                 android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/monitoring_image_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@android:drawable/sym_def_app_icon" />
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    app:srcCompat="@drawable/ic_mon_suivi"
+                    android:contentDescription="@string/todo" />
 
                 <TextView
                     android:id="@+id/monitoring_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/monitoring_button" />
+                    android:layout_marginTop="5dp"
+                    android:text="@string/monitoring_button"
+                    android:textAlignment="center"
+                    android:textColor="@color/mediumBlue"
+                    android:textStyle="bold" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:orientation="vertical">
+                android:layout_marginStart="8dp"
+                android:gravity="center"
+                android:orientation="vertical"
+                tools:background="@color/lightBlue">
 
                 <ImageView
                     android:id="@+id/profile_image_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@android:drawable/sym_def_app_icon" />
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    app:srcCompat="@drawable/ic_mon_profil"
+                    android:contentDescription="@string/todo" />
 
                 <TextView
                     android:id="@+id/profile_view_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/profile_button" />
+                    android:layout_marginTop="5dp"
+                    android:text="@string/profile_button"
+                    android:textAlignment="center"
+                    android:textColor="@color/mediumBlue"
+                    android:textStyle="bold" />
             </LinearLayout>
         </LinearLayout>
     </android.support.constraint.ConstraintLayout>
@@ -83,13 +106,46 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
-        android:layout_height="294dp"
-        android:background="@color/colorPrimaryDark"
+        android:layout_height="400dp"
+        android:background="@drawable/backgroundx2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
+            app:layout_constraintTop_toTopOf="@+id/constraintLayout2"
+            app:layout_constraintVertical_bias="0.312"
+            app:srcCompat="@drawable/logo_blanc"
+            android:contentDescription="@string/todo" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="246dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/consultez_un_m_decin_ou_que_vous_soyez"
+            android:textAlignment="center"
+            android:textColor="@color/colorPrimaryLight"
+            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView4" />
+
         <android.support.constraint.ConstraintLayout
+            android:id="@+id/constraintLayout2"
             android:layout_width="match_parent"
             android:layout_height="270dp">
 
@@ -104,11 +160,12 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
         </android.support.constraint.ConstraintLayout>
 
         <Button
-            android:id="@+id/call_psy_button"
-            android:layout_width="wrap_content"
+            android:id="@+id/call_doctor_button"
+            android:layout_width="296dp"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:layout_marginBottom="8dp"
@@ -116,13 +173,32 @@
             android:layout_marginStart="12dp"
             android:layout_marginTop="8dp"
             android:layout_weight="1"
-            android:text="@string/call_a_psychologist"
+            android:background="@drawable/btn_rounded_white"
+            android:backgroundTint="@android:color/white"
+            android:text="@string/call_a_doctor_text"
+            android:textColor="@color/md_blue_A400"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.57"
+            app:layout_constraintHorizontal_bias="0.576"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintVertical_bias="0.779" />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/nos_professionels_de_sant_disponible_24h_24"
+            android:textColor="@color/colorPrimaryLight"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/call_doctor_button" />
 
     </android.support.constraint.ConstraintLayout>
 
@@ -130,14 +206,12 @@
         android:id="@+id/dialog_container_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
     </FrameLayout>
 
