--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#000</color>
     <color name="bluePrimary">#28328c</color>
+    <color name="lightBlue">#f5f9ff</color>
+    <color name="mediumBlue">#3b8afe</color>
 </resources>
