--- a/app/src/main/res/layout/specialization_item.xml
+++ b/app/src/main/res/layout/specialization_item.xml
@@ -2,14 +2,17 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="80dp"
+    android:layout_marginBottom="8dp"
+    android:layout_marginTop="8dp"
+    android:background="@color/lightBlue">
 
     <ImageView
         android:id="@+id/specialization_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="8dp"
         android:layout_weight="1"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -27,7 +30,8 @@
         android:layout_marginTop="8dp"
         android:layout_weight="1"
         android:gravity="center_vertical"
-        android:text="TextView"
+        android:text="@string/speciality"
+        android:textColor="@color/mediumBlue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/specialization_image"
