--- a/app/src/main/res/layout/activity_symptoms.xml
+++ b/app/src/main/res/layout/activity_symptoms.xml
@@ -6,74 +6,103 @@
     android:layout_height="match_parent"
     tools:context=".activities.SymptomsActivity">
 
+    <ProgressBar
+        android:id="@+id/progressBar2"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp">
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="20dp"
+        android:orientation="vertical">
 
-        <ProgressBar
-            android:id="@+id/progressBar2"
-            style="?android:attr/progressBarStyleHorizontal"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:layout_editor_absoluteX="109dp"
-            tools:layout_editor_absoluteY="0dp" />
+            android:layout_height="479dp"
+            android:layout_marginTop="25dp"
+            android:orientation="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/textView5"
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="match_parent"
+                android:layout_height="28dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:text="@string/quels_sont_vos_symptomes"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/textView6"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:layout_editor_absoluteX="38dp" />
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="35dp"
+                android:layout_marginTop="12dp"
+                android:text="@string/veuillez_utliser_la_bare_de_recherche_pour_ajouter_un_symptome"
+                tools:layout_editor_absoluteX="26dp"
+                tools:layout_editor_absoluteY="123dp" />
+
+            <MultiAutoCompleteTextView
+                android:id="@+id/multiAutoCompleteTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/search_input"
+                android:drawableEnd="@drawable/ic_search"
+                android:hint="@string/mal_de_t_te_jambe"
+                android:paddingBottom="10dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingTop="10dp"
+                tools:layout_editor_absoluteX="38dp"
+                tools:layout_editor_absoluteY="135dp" />
+
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
-            android:text="Quels sont vos symptomes ?"
-            app:layout_constraintBottom_toTopOf="@+id/textView6"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="38dp" />
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="parent">
 
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Veuillez utliser la bare de recherche pour ajouter un symptome"
-            tools:layout_editor_absoluteX="26dp"
-            tools:layout_editor_absoluteY="123dp" />
+            <Button
+                android:id="@+id/symptoms_cancel_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_weight="1"
+                android:background="@android:color/transparent"
+                android:text="@string/annuler"
+                app:layout_constraintBottom_toTopOf="@+id/symptoms_next_button" />
 
-        <MultiAutoCompleteTextView
-            android:id="@+id/multiAutoCompleteTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Mal de tête, jambe,  "
-            tools:layout_editor_absoluteX="38dp"
-            tools:layout_editor_absoluteY="135dp" />
+            <Button
+                android:id="@+id/symptoms_next_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_weight="1"
+                android:background="@drawable/btn_rounded"
+                android:backgroundTint="@color/bluePrimary"
+                android:text="@string/terminer"
+                android:textColor="@android:color/white"
+                app:layout_constraintBottom_toBottomOf="parent" />
 
-    </LinearLayout>
+        </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginBottom="8dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent">
-
-        <Button
-            android:id="@+id/symptoms_next_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_weight="1"
-            android:text="Suivant"
-            app:layout_constraintBottom_toBottomOf="parent" />
-
-        <Button
-            android:id="@+id/symptoms_cancel_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_weight="1"
-            android:text="annuler"
-            app:layout_constraintBottom_toTopOf="@+id/symptoms_next_button" />
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
