--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="bluePrimary">#28328c</color>
     <color name="lightBlue">#f5f9ff</color>
     <color name="mediumBlue">#3b8afe</color>
+    <color name="lightGrey">#e4e4e4</color>
 </resources>
