--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="80dp"
         android:layout_marginEnd="8dp"
-        android:fontFamily="@font/roboto_font"
+        android:fontFamily="@font/roboto_medium"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         app:layout_constraintBottom_toTopOf="@+id/appCompatButtonLogin"
@@ -41,7 +41,7 @@
             android:id="@+id/textInputEditTextEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/roboto_font"
+            android:fontFamily="@font/roboto_medium"
             android:hint="@string/hint_email"
             android:inputType="textEmailAddress"
             android:textSize="14sp" />
@@ -64,7 +64,7 @@
             android:id="@+id/textInputEditTextPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/roboto_font"
+            android:fontFamily="@font/roboto_medium"
             android:hint="@string/hint_password"
             android:inputType="textPassword"
             android:textSize="14sp" />
@@ -93,7 +93,7 @@
         android:layout_marginBottom="84dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:fontFamily="@font/roboto_font"
+        android:fontFamily="@font/roboto_medium"
         android:text="@string/hint_forgot_password"
         app:layout_constraintBottom_toTopOf="@+id/textViewLinkRegister"
         app:layout_constraintEnd_toEndOf="parent"
@@ -107,7 +107,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:text="@string/text_already_member"
-        app:fontFamily="@font/roboto_font"
+        android:textAlignment="center"
+        app:fontFamily="@font/roboto_medium"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
