--- a/app/src/main/res/layout/doctor_choice.xml
+++ b/app/src/main/res/layout/doctor_choice.xml
@@ -29,6 +29,7 @@
             android:layout_height="78dp"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
+            android:fontFamily="@font/roboto_medium"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:background="@color/lightBlue"
@@ -46,6 +47,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
+            android:fontFamily="@font/roboto_medium"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:gravity="center_horizontal"
