--- a/app/src/main/res/layout/specialization_item.xml
+++ b/app/src/main/res/layout/specialization_item.xml
@@ -26,6 +26,7 @@
         android:layout_height="72dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
+        android:fontFamily="@font/roboto_medium"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_weight="1"
