--- a/app/src/main/res/layout/swipe_deck.xml
+++ b/app/src/main/res/layout/swipe_deck.xml
@@ -12,29 +12,45 @@
     android:padding="25dp">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical" android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="match_parent"
+        android:layout_height="800dp"
+        android:orientation="vertical"
+        android:padding="25dp">
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="48dp"
+            android:layout_height="46dp"
+            android:layout_marginBottom="20dp"
+            card_view:srcCompat="@drawable/info" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center">w
-        </LinearLayout>
+            android:gravity="center"
+            android:orientation="horizontal"></LinearLayout>
+
         <TextView
             android:id="@+id/card_title_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Sample Text"
+            android:layout_marginBottom="25dp"
+            android:fontFamily="@font/roboto_medium"
             android:gravity="center_horizontal"
-            android:textSize="20dp" />
+            android:text="Sample Text"
+            android:textAlignment="viewStart"
+            android:textColor="@android:color/black"
+            android:textSize="18dp"
+            android:textStyle="bold" />
+
         <TextView
             android:id="@+id/card_content_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Sample Text"
             android:gravity="center_horizontal"
-            android:textSize="20dp" />
+            android:text="Sample Text"
+            android:textAlignment="viewStart"
+            android:textSize="12dp" />
 
     </LinearLayout>
 </android.support.v7.widget.CardView>
